# LinkDooni

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/bot/handlers/: __init__.py  categories.py  common.py  helpers.py  inline.py  links.py
app/bot/keyboards/: builders.py  callbacks.py
app/bot/middlewares/: database.py
app/bot/states/: main.py
app/config/: features.yaml  messages.yaml  settings.py
app/db/: models.py  session.py
app/db/repositories/: categories.py  links.py  tags.py  users.py
app/services/: export_service.py  import_service.py  link_service.py  metadata_fetcher.py  search_service.py  url_validator.py
app/utils/: i18n.py  logging.py  persian.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_unique_original_link_url.py
tests/: conftest.py  test_inline_query.py  test_link_service.py  test_metadata_fetcher.py  test_persian.py  test_repositories.py  test_url_validator.py
