[project]
name = "linkdooni"
version = "0.1.0"
description = "A Telegram bot for organizing website links inside Telegram."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "LinkDooni contributors" },
]
dependencies = [
  "aiogram>=3.7,<4",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "pyyaml>=6.0,<7",
  "selectolax>=0.3,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24.1,<26",
]

[dependency-groups]
dev = [
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.5,<1",
]

[project.scripts]
linkdooni = "app.main:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "A003",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"migrations/**/*.py" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "error",
]

[tool.alembic]
script_location = "migrations"
